--- a/pages/page2/assets/css/style.css
+++ b/pages/page2/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/assets/img/Untitled design.jpg');
+  background-image: url('../img/bg2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
