--- a/pages/page3/assets/css/style.css
+++ b/pages/page3/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Poppins', sans-serif;
-  background-image: url('/assets/img/Untitled design.jpg');
+  background-image: url('../img/bg2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
