--- a/pages/page4/assets/css/style.css
+++ b/pages/page4/assets/css/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Poppins', sans-serif;
-  background-image: url('/assets/img/Untitled design.jpg');
+  background-image: url('../img/bg2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
